crates/ink/tests/ui/storage_item/fail/collections_only_packed_2.stderr
error[E0277]: the trait bound `BTreeMap<u128, NonPacked>: Packed` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_2.rs:11:8
   |
11 |     a: BTreeMap<u128, NonPacked>,
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ink::parity_scale_codec::Decode` is not implemented for `BTreeMap<u128, NonPacked>`, which is required by `BTreeMap<u128, NonPacked>: AutoStorableHint<ManualKey<453539032>>`
   |
   = help: the trait `ink::parity_scale_codec::Decode` is implemented for `BTreeMap<K, V>`
   = note: required for `BTreeMap<u128, NonPacked>` to implement `Packed`
   = note: required for `BTreeMap<u128, NonPacked>` to implement `StorableHint<()>`
   = note: required for `BTreeMap<u128, NonPacked>` to implement `AutoStorableHint<ManualKey<453539032>>`

error[E0277]: the trait bound `NonPacked: WrapperTypeEncode` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_2.rs:11:8
   |
11 |     a: BTreeMap<u128, NonPacked>,
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `WrapperTypeEncode` is not implemented for `NonPacked`, which is required by `BTreeMap<u128, NonPacked>: StorageLayout`
   |
   = help: the following other types implement trait `WrapperTypeEncode`:
             &T
             &mut T
             Arc<T>
             Box<T>
             Cow<'a, T>
             Rc<T>
             String
             Vec<T>
           and $N others
   = note: required for `NonPacked` to implement `Encode`
   = note: required for `NonPacked` to implement `Packed`
   = note: required for `BTreeMap<u128, NonPacked>` to implement `StorageLayout`
